--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "token"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "jest": {
     "testRegex": ".spec.js$",
@@ -41,7 +41,7 @@
     "@types/node": "^14",
     "eslint": "^7",
     "eslint-config-airbnb": "^18",
-    "eslint-config-prettier": "^6",
+    "eslint-config-prettier": "^7",
     "eslint-plugin-import": "^2",
     "eslint-plugin-sonarjs": "^0",
     "jest": "^26",
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "type-check": "tsc --noEmit",
+    "type-check": "tsc --noEmit -p jsconfig.json",
     "test:cover": "jest --detectOpenHandles --runInBand --collectCoverage",
     "test": "jest --detectOpenHandles --runInBand"
   },
